--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
                     <li><a href="https://vmel96.github.io/Full-Stack-Python---Codo-a-Codo---Comisi-n-23020---Grupo-3/publicaciones.html" title="Ir a Publicaciones"><button class="sin-bordes">Publicaciones</button></a> </li>
                     <li><a href="https://vmel96.github.io/Full-Stack-Python---Codo-a-Codo---Comisi-n-23020---Grupo-3/cv.html" title="Ir a 'Sobre mi'"><button class="sin-bordes">Sobre mí</button></a> </li>
                     <li><a href="https://vmel96.github.io/Full-Stack-Python---Codo-a-Codo---Comisi-n-23020---Grupo-3/contacto.html" title="Ir a formulario de Contacto"><button class="sin-bordes">Contacto</button></a></li>
+                    <li><a href="staff.html" title="Ir a Staff"><button class="sin-bordes">Staff</button></a></li>
+                    <li><a href="login.html" title="Ir a ADM-Login"><button class="sin-bordes">ADM-Login</button></a></li>
                 </ul>
             </div>
         </nav>
